--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
-<meta charset="utf-8"/>
-<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no"/>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
 
 {% assign meta_title = page.title | default: site.title %}
 {% assign meta_author = page.author | default: site.author %}
@@ -25,12 +25,12 @@
   {% endif %}
 </title>
 
-<meta name="title" content="{{ meta_title }}" property="og:site_name" />
-<meta name="author" content="{{ meta_author }}" property="og:title" />
-<meta name="description" content="{{meta_description}}" property="og:description" />
-<meta content="{{meta_type}}" property="og:type" />
-<meta content="{{meta_url}}" property="og:url" />
-<meta content="{{meta_img}}" property="og:image" />
+<meta name="title" content="{{ meta_title }}" property="og:site_name">
+<meta name="author" content="{{ meta_author }}" property="og:title">
+<meta name="description" content="{{meta_description}}" property="og:description">
+<meta content="{{meta_type}}" property="og:type">
+<meta content="{{meta_url}}" property="og:url">
+<meta content="{{meta_img}}" property="og:image">
 {% if page.date %}
   <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
 {% endif %}
@@ -57,6 +57,10 @@
 <meta name="msapplication-navbutton-color" content="#263959">
 <!-- iOS Safari -->
 <meta name="apple-mobile-web-app-status-bar-style" content="#263959">
+
+{% assign page_url = page.url | remove: "index.html" %}
+{% assign canonical_url = page_url | prepend: site.baseurl | prepend: site.url %}
+<link rel="canonical" href={{ canonical_url }}>
 
 
 <link href="https://fonts.googleapis.com/css?family=Lato:300i,400,700|Nanum+Gothic:400,700|Nanum+Myeongjo:400,700|PT+Serif:400,700" rel="stylesheet">
