Fix ypo html tag

--- a/_includes/pagination_in_post.html
+++ b/_includes/pagination_in_post.html
@@ -45,4 +45,4 @@
       <a class="no-scale" href="{{ next }}">{{nTitle | truncate: truncate_count, '...'}} &nbsp;&nbsp;<i class="fa fa-angle-right"></i></a>
     </div>
   {% endif %}
-</d>
+</div>
