Style add & fix for small devices
- media query for  max-width: 480 device
- iPhone 에서 post 화면의 레이아웃 깨짐 현상 수정
 : iOS 10 에서 flex direction 이column 일 때, 하위 엘리먼트의 height 값을 %로 주면 제대로 계산 되지 않아서 레이아웃 깨짐 현상. => height 속성 제거.

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,7 +5,7 @@ layout: default
 <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
 {% include topbar.html %}
 {% include sidebar.html %}
-<div class="content-box clearfix" id="contents">
+<div class="content-box" id="contents">
   {{ content }}
   <div class="btn-arrow">
     <div id="btn-top">
