--- a/assets/css/sass/_config.scss
+++ b/assets/css/sass/_config.scss
@@ -1,3 +1,5 @@
 $sidebar-width: 200px;
-$tobbar-padding-top: 15px;
+$sidebar-width-s: 130px;
+$tobbar-padding: 15px;
+$tobbar-padding-s: 5px;
 $default-font-size: 16;
