--- a/assets/css/sass/_layout.scss
+++ b/assets/css/sass/_layout.scss
@@ -1,6 +1,6 @@
 .wrapper {
-  position: relative;
   width: 100%;
+  height: 100%;
   max-width: 1250px;
   @include align-self(center);
 
@@ -12,6 +12,7 @@
   padding: 20px;
   padding-top: 50px;
   width: 100%;
+  height: 100%;
 
   @include flexbox;
   @include flex-direction(column);
@@ -20,10 +21,6 @@
   @include flex-wrap(wrap);
 
   @include transition(all 0.5s ease);
-
-  // ul:not(.tag-box) {
-  //   padding: 0;
-  // }
 }
 
 #show-nav {
@@ -34,23 +31,25 @@
 }
 
 .btn-arrow {
-  @include sticky;
-  bottom: 20px;
-  width: 1.4em;
-  height: 1.4em;
+  @include flexbox;
+  @include flex-direction(column);
   @include align-self(flex-end);
+  @include sticky;
+  bottom: 1em;
+  width: 1.4em;
+  height: auto; 
   z-index: 1000;
   text-align: center;
   vertical-align: middle;
-  font-size: 1.3em;
-  visibility: hidden;
+  font-size: 1.4em;
+  visibility: visible;
 
   @include transition(all 0.5s ease);
 }
 
 .sticky-header {
   @include sticky;
-  top: convert-unit(1.5, em, px) + $tobbar-padding-top + 5px;
+  top: convert-unit(1.5, em, px) + $tobbar-padding + 5px;
   padding-bottom: 5px;
   z-index: 1000;
 }
