--- a/assets/css/sass/_post.scss
+++ b/assets/css/sass/_post.scss
@@ -2,12 +2,7 @@
   @include flexbox;
   @include flex-direction(column);
   width: 100%;
-  height:100%;
   background-color: $white;
-}
-.page-content {
-  @include flexbox;
-  @include flex-direction(column);
 }
 
 .wrap-content {
@@ -46,6 +41,9 @@
 }
 
 .content-body {
+  @include flexbox;
+  @include flex-direction(column);
+
   width: 90%;
   line-height: 1.5em;
 
@@ -137,4 +135,5 @@
 
 .comment-area {
   width: 100%;
+  padding: 10px;
 }
