--- a/assets/css/sass/_topbar.scss
+++ b/assets/css/sass/_topbar.scss
@@ -2,14 +2,14 @@
   @include flexbox;
   @include flex-direction(row);
   width: 100%;
-  padding-bottom: 20px;
   background-color: $bg-color;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
   margin-left: 20px;
-  padding-top: $tobbar-padding-top;
+  padding-bottom: $tobbar-padding;
+  padding-top: $tobbar-padding;
 
   @include transition(all 0.5s ease);
 
