--- a/assets/css/sass/_colors.scss
+++ b/assets/css/sass/_colors.scss
@@ -5,8 +5,23 @@ $gray: #ecf0f1;
 $dark-gray: #a0a0a0;
 $dark-blue: #263959;
 $dark: #333030;
-$bg-color: #fbfbfb;
+$bg-color1: #fbfbfb;
+
+$bg-color: #5c4d78;
+
 $hover-color: orange;
 
-$title-color: #263959;
+$title-color1: #263959;
+
+$link-color: #5c2d5b;
+$bg-link-color: #bcace0;
+$bg-font-color: white;
+$title-color: #5c2d5b;
+
+$tag-hover-color: #cfc2de;
+
+$violet-box-bg-color: #f6f3fc;
+$violet-box-border-color: #ccbeec;
+
+
 $blockquote-color: #f7fafc;
