--- a/_includes/post_item_template.html
+++ b/_includes/post_item_template.html
@@ -1,32 +1,30 @@
 <li class="post-item">
-  <div class="post-item-wrapper">
-    <div class="post-item-content">
-      <div class="post-content-text">
-          <div class="post-item-title">
-            <h2 class="post-title">
-              <a class="no-scale" href="{{post.url | prepend: site.baseurl | replace: "//", "/"}}">
-                  {{ post.title | | truncate: 25, '...' }}
-              </a>
-            </h2>
-            <div class="post-date">
-              <span>{{ post.date | date: '%Y, %b %d %H:%M' }}</span>
-            </div>
-          </div> 
-          <p class="post-content">{{ post.content | strip_html | truncatewords: 15 }}</p>
-      </div>
-      <div class="item-list-tag">
-        {% for tag in post.tags %}
-          <a class="gray-box no-anim tag" href="/tags#{{ tag | prepend: site.baseurl | replace: "//", "/" }}">&#35; {{ tag }}</a>
-        {% endfor %}
-      </div>
+  <div class="post-item-header">
+    <div class="post-title">
+      <h2><a class="no-scale" href="{{post.url | prepend: site.baseurl | replace: "//", "/"}}">
+          {{ post.title | | truncate: 35, '...' }}
+      </a></h2>
     </div>
 
+    <div class="post-date">
+      {{ post.date | date: '%Y, %b %d %H:%M' }}
+    </div>
+  </div>
+  <div class="post-item-body">
     {% if post.img %}
-      <div class="post-content-img">
+      <div class="post-img">
         <a class="no-scale" href="{{post.url | prepend: site.baseurl | replace: "//", "/"}}">
           <img class="post-thumbnail" src="{{ site.image_url | append:  "/thumbnails/thumb_" | append: post.img | prepend: site.baseurl }}" alt="{{post.img}}" />
         </a>
       </div>
     {% endif %}
+    <div class="post-text">{{ post.content | strip_html | truncatewords: 15 }}</div>
   </div>
+
+  <div class="item-list-tag">
+    {% for tag in post.tags %}
+      <a class="violet-box no-anim tag" href="/tags#{{ tag | prepend: site.baseurl | replace: "//", "/" }}">&#35; {{ tag }}</a>
+    {% endfor %}
+  </div>
+  
 </li>
