--- a/assets/css/sass/_post.scss
+++ b/assets/css/sass/_post.scss
@@ -3,6 +3,13 @@
   @include flex-direction(column);
   width: 100%;
   background-color: $white;
+  @include border-radius(10px);
+  margin-top: 5px;
+
+  .wrap-content,
+  .post-header {
+    @include border-radius(10px);
+  }
 }
 
 .wrap-content {
@@ -101,14 +108,6 @@
   @include transition(background-color .3s);
 }
 
-.tag {
-  font-size: 0.7em;
-
-  &:hover {
-    background-color: $gray;
-  }
-}
-
 .pagination-post {
   @include flexbox;
   width: 100%;
@@ -136,4 +135,18 @@
 .comment-area {
   width: 100%;
   padding: 10px;
+}
+
+
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 480px) {
+  .wrap-content {
+    padding: 2px;
+  }
+
+  .content-body {
+    width: 98%;
+    padding: 5px;
+  }
 }
