--- a/assets/css/sass/_post_list.scss
+++ b/assets/css/sass/_post_list.scss
@@ -1,14 +1,3 @@
-
-// .category-title {
-//   border-bottom: solid 1px $dark;
-//   @include flexbox;
-//   @include flex-direction(row);
-//   @include align-items(center);
-//   width: 100%;
-//   @include align-self(flex-start);
-//   background-color: $lightgray;
-// }
-
 .post-list {
   clear: both;
   list-style: none;
@@ -21,12 +10,11 @@
   padding: 0;
   
   .post-item {
+    // border: 1px solid forestgreen;
     @include flexbox;
     @include flex-direction(column);
     width: 100%;
-    padding: 0.7rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 1rem;
     margin-bottom: 1.5rem;
     min-height: 4rem;
     background-color: #fff;
@@ -34,77 +22,90 @@
   
     @include border-radius(10px);
     @include transition(all .3s ease);
-    @include box-shadow(0 1px 1px 0 rgba(31, 35, 46, .15));
-    
+    // @include box-shadow(0 1px 1px 0 rgba(31, 35, 46, .15));
+    @include box-shadow(3px 7px 9px 0px rgba(0,0,0,0.51));
+
     &:hover {
-      transform: translate(0px, -2px);
-      @include box-shadow(0 15px 45px -10px rgba(10, 16, 34, .2));
-    }
-  
-    .post-item-wrapper {
-      @include flexbox;
-      @include align-items(center);
+      @include transform(translate(0px, -2px));
+      // @include box-shadow(0 15px 45px -10px rgba(10, 16, 34, .2));
+      @include box-shadow(3px 20px 50px -15px rgba(0,0, 0, .9));
     }
 
-    .post-item-content {
+    // & * {
+    //   padding: 2px;
+    // }
+
+    .post-item-header {
+      // border: 1px solid royalblue;
+      border-bottom: 1px solid $dark-gray;
       @include flexbox;
-      @include flex-direction(column);
-      @include flex-grow(2);
+      @include flex-direction(row);
+      @include flex-wrap(wrap);
       width: 100%;
-
-      & > * {
-        padding: 5px;
-      }
-
-      .post-content-text {
-        & > * {
-          padding-bottom: 5px;
-        }
-      }
-
-      .post-item-title {
-        @include flexbox;
-        @include align-items(center);
-
-        margin-bottom: 10px;
-      }
+      margin-bottom: .4em;
 
       .post-title {
-        margin: 0;
+        // border: 1px solid brown;
+        overflow: hidden;
+        padding: 0;
+        // white-space: nowrap; 
+        // overflow: hidden;
+        // text-overflow: ellipsis;
+        line-height: 2em;
+        a {
+          color: $title_color;
+        }
       }
-
-      .post-date
-      {
-        align-self: flex-end;
+      .post-date {
+        // border: 1px solid red;
         font-size: 0.75em;
-        margin-left: 10px;
+        @include align-self(flex-start);
+        @include align-self(center);
       }
+    }
 
-      .post-content-img {
-        @include flex-grow(1);
-      }
+    .post-item-body {
+      // border: solid 1px blue;
+      @include flexbox;
+      width: 100%;
+      margin-bottom: .3em;
+    }
 
-      .post-thumbnail {
-        width: 100px;
-        max-width: 100%;
-      }
+    .post-img {
+      // border: solid 1px orangered;
+      text-align: center;
+      margin-right: .8em;
+    }
+
+    .post-thumbnail {
+      // border: solid 1px powderblue;
+      height: 100px;
+      max-width: 100%;
+      @include border-radius(10px);
+    }
+    
+    .post-text {
+      // border: solid 1px purple;
+      color: $dark;
+      margin-bottom: .3em;
+      height: 100%;
+      width: 100%;
+      max-width: 100%;
+      @include align-self(center);
+      word-wrap: break-word;
     }
 
     .item-list-tag {
       @include flexbox;
       @include flex-direction(row);
+      margin-bottom: .4em;
+      padding-left: .6em;
 
       & > * {
-        margin-right: 2px;
+        margin-right: 3px;
       }
     }
   }
-}
-
-.post-content {
-  // border: solid 1px royalblue;
-  color: $dark;
-  margin: 0;
 }
 
 .pagination {
@@ -116,5 +117,17 @@
     &:hover {
       font-weight: bold;
     }
+  }
+}
+
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 480px) {
+  .post-item-body {
+    @include flex-wrap(wrap);
+  }
+
+  .post-img {
+    width: 100%;
   }
 }
