--- a/assets/css/sass/_topbar.scss
+++ b/assets/css/sass/_topbar.scss
@@ -15,6 +15,7 @@
 
   .sidebar-toggle {
     font-size: 1.2em;
+    color: $bg-font-color;
     cursor: pointer;    
   }
 
@@ -23,5 +24,28 @@
     @include align-self(center);
     vertical-align: middle;
     font-size: 1.15em;
+
+    a {
+      color: $bg-link-color;
+    }
+  }
+}
+
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 480px) {
+  .topbar {
+    margin-left: 2px;
+    padding-top: $tobbar-padding-s;
+    padding-bottom: $tobbar-padding-s;
+    
+    .sidebar-toggle {
+      font-size: 1.4em;
+    }
+  
+    .topmenu {
+      padding-left: 0.5em;
+      font-size: 1.25em;
+    }
   }
 }
