Style: tag box style color change

--- a/assets/css/sass/_colors.scss
+++ b/assets/css/sass/_colors.scss
@@ -20,8 +20,8 @@ $title-color: #5c2d5b;
 
 $tag-hover-color: #cfc2de;
 
-$violet-box-bg-color: #f6f3fc;
-$violet-box-border-color: #ccbeec;
+$violet-box-bg-color: #fbf9ff;
+$violet-box-border-color: #e8dfff;
 
 
 $blockquote-color: #f7fafc;
