--- a/_includes/post_item_template.html
+++ b/_includes/post_item_template.html
@@ -1,7 +1,7 @@
 <li class="post-item">
   <div class="post-item-header">
     <div class="post-title">
-      <h2><a class="no-scale" href="{{post.url | prepend: site.baseurl | replace: "//", "/"}}">
+      <h2><a class="link-bg-white no-scale" href="{{post.url | prepend: site.baseurl | replace: "//", "/"}}">
           {{ post.title | | truncate: 35, '...' }}
       </a></h2>
     </div>
