--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -3,6 +3,6 @@
       <i class="fas fa-bars" id="sidebar-toggle"></i>
     </div>
   <div class="topmenu">
-    <a href="{{site.baseurl}}/"><i class="fas fa-home"></i></a>
+    <a class="btn-home" href="{{site.baseurl}}/"><i class="fas fa-home"></i></a>
   </div>
 </div>
