--- a/assets/css/sass/_colors.scss
+++ b/assets/css/sass/_colors.scss
@@ -13,8 +13,8 @@ $hover-color: orange;
 
 $title-color1: #263959;
 
-$link-color: #5c2d5b;
-$bg-link-color: #bcace0;
+$link-bg-white-color: #5c2d5b;
+$link-color: #c4bbda;
 $bg-font-color: white;
 $title-color: #5c2d5b;
 
@@ -24,4 +24,7 @@ $violet-box-bg-color: #fbf9ff;
 $violet-box-border-color: #e8dfff;
 
 
-$blockquote-color: #f7fafc;
+$blockquote-bg-color1: #f7fafc;
+$blockquote-bg-color: #fbf9ff;
+$blockquote-color: #5c4d78;
+$blockquote-border-color: #a967a8;
