--- a/assets/css/sass/_sidebar.scss
+++ b/assets/css/sass/_sidebar.scss
@@ -129,7 +129,13 @@ footer {
     padding: 10px;
   }
 
-  a {
+  // a {
+  //   font-family: $font-sans;
+  //   font-size: 1.2em;
+  //   color: $post-link-color;
+  // }
+
+  .side-menu {
     font-family: $font-sans;
     font-size: 1.2em;
   }
