--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -6,7 +6,7 @@
 
         {% for trail in paginator.page_trail %}
             <a 
-                {% if page.url == trail.path %}class="selected"{% else %}class=""{% endif %}
+                class="{% if page.url == trail.path %}selected{% endif %}"
                 href="{{ trail.path | prepend: site.baseurl }}" title="{{ trail.title }}">
                 {{ trail.num }}
             </a>
