--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -7,12 +7,12 @@ layout: default
 {% include sidebar.html %}
 <div class="content-box" id="contents">
   {{ content }}
-  <div class="btn-arrow">
+  <div class="btn-arrow-container">
     <div id="btn-top">
-      <a href=""><i class="fas fa-arrow-circle-up"></i></a>
+      <a class="btn-arrow" href=""><i class="fas fa-arrow-circle-up"></i></a>
     </div>
     <div id="btn-bottom">
-      <a href=""><i class="fas fa-arrow-circle-down"></i></a>
+      <a class="btn-arrow" href=""><i class="fas fa-arrow-circle-down"></i></a>
     </div>
   </div>
 </div>
