--- a/assets/css/sass/_post.scss
+++ b/assets/css/sass/_post.scss
@@ -8,8 +8,17 @@
 
   .wrap-content,
   .post-header {
-    @include border-radius(10px);
+    @include border-radius(8px);
   }
+
+  // a {
+  //   @extend a.link-bg-white;
+
+  //   display: inline;
+  //   text-decoration: underline;
+  //   font-weight: 550;
+  //   font-style: oblique;
+  // }
 }
 
 .wrap-content {
@@ -54,16 +63,20 @@
   width: 90%;
   line-height: 1.5em;
 
+  h1, h2, h3 {
+    margin: 70px 0 30px 0;
+    font-weight: 600;
+  }
+
   a {
+    // @extend a.link-bg-white;
+
+    @extend a, .link-bg-white;
+
     display: inline;
     text-decoration: underline;
     font-weight: 550;
     font-style: oblique;
-  }
-
-  h1, h2, h3 {
-    margin: 70px 0 30px 0;
-    font-weight: 600;
   }
 }
 
@@ -91,7 +104,6 @@
   margin: 30px 0  ;
   border-bottom: 1px solid $dark-gray;
   
-  .item-list-tag,
   .page-tag {
     margin-bottom: 10px;
     text-align: left;
@@ -137,6 +149,32 @@
   padding: 10px;
 }
 
+blockquote {
+  border-left: 5px solid $blockquote-border-color;
+  background-color: $blockquote-bg-color;
+  padding: .3em 1em .3em 1em;
+  // padding-left: 1rem;
+  // padding-right: 1rem;
+  margin: 0 1rem 0 1rem;
+  // font-style: italic;
+  font-weight: 700;
+  line-height: 1.1em;
+  font-size: 1.3em;
+  
+  color: $blockquote-color;
+
+  p { 
+    margin: .3em; 
+  }
+
+  blockquote {
+    border: 0;
+    margin-left: .1rem;
+    padding: 1px;
+    font-size: 0.9em;
+    font-weight: normal;
+  }
+}
 
 
 /* Extra Small Devices, Phones */
