--- a/assets/css/sass/_syntax.scss
+++ b/assets/css/sass/_syntax.scss
@@ -66,6 +66,15 @@
 .css .o + .nt,
 .css .nt + .nt { color: #999; }
 
+// code span{
+//   display: block;
+//   white-space: normal;
+//   word-break:break-all;
+// }
+
+.highlight {
+  overflow-x: auto;
+}
 .highlight table td.gutter {
   width: 10px;
   padding: 0 .5em 0 .5em;
@@ -74,8 +83,20 @@
 }
 
 .highlight pre {
-  margin: .3em auto .3em auto;
+  // margin: .3em auto .3em auto;
+  margin: 0;
+  padding: 0;
+
+  .lineno {
+    color: #bdc1c4;
+  }
 }
+
+.rouge-gutter pre {
+  padding-left: .5em;
+  padding-right: .5em;
+}
+
 
 .center {
   text-align: center;
