--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,10 +4,12 @@
 
 {% seo %}
 
-{% comment %} {% assign meta_title = page.title | default: site.title %}
+<!--
+{% assign meta_title = page.title | default: site.title %}
 {% assign meta_author = page.author | default: site.author %}
 {% assign meta_description = page.descripton || default: site.description }
-{% assign meta_url = site.url | append: site.baseurl | append: page.url | replace: "//", "/" %} {% endcomment %}
+{% assign meta_url = site.url | append: site.baseurl | append: page.url | replace: "//", "/" %}
+-->
 {% assign meta_img = page.image | default: site.user_photo %}
 {% unless meta_image contains "://" %}
   {% assign meta_img = meta_img | prepend: site.baseurl | prepend: site.url %}
@@ -18,18 +20,20 @@
 {% else %}
   {% assign meta_type = "website" %}
 {% endif %}
-{% comment %} 
+
+<!-- 
 <title>
   {% if meta_title != site.title %}
     {{ meta_title | append: " - " | append: site.title }}
   {% else %}
     {{ meta_title }}
   {% endif %}
-</title> {% endcomment %}
-{% comment %} 
+</title>
+
 <meta name="title" content="{{ meta_title }}" property="og:site_name">
 <meta name="author" content="{{ meta_author }}" property="og:title">
-<meta name="description" content="{{meta_description}}" property="og:description"> {% endcomment %}
+<meta name="description" content="{{meta_description}}" property="og:description"> 
+-->
 <meta content="{{meta_type}}" property="og:type">
 {% comment %} <meta content="{{meta_url}}" property="og:url"> {% endcomment %}
 <meta content="{{meta_img}}" property="og:image">
@@ -60,9 +64,13 @@
 <!-- iOS Safari -->
 <meta name="apple-mobile-web-app-status-bar-style" content="#263959">
 
+<!--
 {% assign page_url = page.url | remove: "index.html" %}
 {% assign canonical_url = page_url | prepend: site.baseurl | prepend: site.url %}
 <link rel="canonical" href={{ canonical_url }}>
+-->
+
+{% feed_meta %}
 
 
 <link href="https://fonts.googleapis.com/css?family=Lato:300i,400,700|Nanum+Gothic:400,700|Nanum+Myeongjo:400,700|PT+Serif:400,700" rel="stylesheet">
