--- a/assets/css/sass/_topbar.scss
+++ b/assets/css/sass/_topbar.scss
@@ -25,7 +25,7 @@
     vertical-align: middle;
     font-size: 1.2em;
 
-    text-shadow: 3px 3px 2px $dark;
+    // text-shadow: 3px 3px 2px $dark;
 
     // .btn-home {
     //   color: $bg-link-color;
