--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,7 +48,7 @@ layout: main
       <div class="page-footer">
         <div class="page-tag">
           {% for tag in page.tags %}
-            <a class="violet-box no-anim tag" href="/tags#{{ tag | prepend: site.baseurl | replace: "//", "/>"}}">&#35; {{ tag }}</a>
+            <a class="tag-box no-anim tag" href="/tags#{{ tag | prepend: site.baseurl | replace: "//", "/>"}}">&#35; {{ tag }}</a>
           {% endfor %}
         </div>
       </div>
