--- a/assets/css/sass/_post_list.scss
+++ b/assets/css/sass/_post_list.scss
@@ -2,6 +2,7 @@
   clear: both;
   list-style: none;
   width: 100%;
+  max-width: $max-container-width;
   @include flexbox;
   @include flex-direction(column);
   @include align-items(center);
@@ -23,7 +24,8 @@
     @include border-radius(10px);
     @include transition(all .3s ease);
     // @include box-shadow(0 1px 1px 0 rgba(31, 35, 46, .15));
-    @include box-shadow(3px 7px 9px 0px rgba(0,0,0,0.51));
+    // @include box-shadow(3px 7px 9px 0px rgba(0,0,0,0.51));
+    @include box-shadow(0px 1px 1px 0px rgba(0,0,0,0.51));
 
     &:hover {
       @include transform(translate(0px, -2px));
