Style: don't print the time (print only date)

--- a/assets/css/sass/_post_list.scss
+++ b/assets/css/sass/_post_list.scss
@@ -62,8 +62,8 @@
       .post-date {
         // border: 1px solid red;
         font-size: 0.75em;
-        @include align-self(flex-start);
-        @include align-self(center);
+        padding-bottom: 5px;
+        @include align-self(flex-end);
       }
     }
 
