--- a/_includes/post_item_template.html
+++ b/_includes/post_item_template.html
@@ -7,7 +7,7 @@
     </div>
 
     <div class="post-date">
-      {{ post.date | date: '%Y, %b %d %H:%M' }}
+      {{ post.date | date: '%Y, %b %d' }}
     </div>
   </div>
   <div class="post-item-body">
