--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@ layout: main
     <div class="wrap-content">
       <header class="header-page">
         <h1 class="page-title">{{page.title}}</h1>
-        <div class="page-date"><span>{{page.date | date: '%Y, %b %d %H:%M'}}</span></div>
+        <div class="page-date"><span>{{page.date | date: '%Y, %b %d'}}</span></div>
       </header>
 
 
