--- a/assets/css/sass/_config.scss
+++ b/assets/css/sass/_config.scss
@@ -2,5 +2,5 @@ $sidebar-width: 200px;
 $sidebar-width-s: 130px;
 $tobbar-padding: 15px;
 $tobbar-padding-s: 5px;
-$default-font-size: 16;
+$default-font-size: 16px;
 $max-container-width: 700px;
