--- a/assets/css/sass/_syntax.scss
+++ b/assets/css/sass/_syntax.scss
@@ -1,4 +1,4 @@
-.highlight {background-color: #faf9f9; border-radius: 3px; margin: 0; padding: 5px; }
+.highlight {background-color: #312c2c; border-radius: 3px; margin: 0; padding: 5px; }
 .highlighter-rouge {color: #ce887b; font-weight: 400; }
 .highlight .hll { background-color: #ffc; }
 .highlight .c { color: #999; } /* Comment */
