--- a/assets/css/sass/_base.scss
+++ b/assets/css/sass/_base.scss
@@ -3,15 +3,15 @@
 }
 
 html {
-  font-size: $default-font-size + px;
-  line-height: 1.5em;
+  font-size: $default-font-size;
+  line-height: 1.65em;
 }
 
 body {
   @include flexbox;
   @include flex_direction(column);
   font-family: $font_sans;
-  font-size: $default-font-size + px;
+  font-size: $default-font-size;
   @include font-smoothing;
   @include text-size-adjust(100%);
   text-rendering:optimizelegibility;
@@ -28,6 +28,9 @@ h1, h2, h3, h4, h5, h6 {
   margin: .3em;
 
 }
+
+h1 { font-size: 1.65em; }
+h2 { font-size: 1.5em; }
 
 img {
   max-width: 100%;
@@ -47,7 +50,7 @@ img {
 
 
 a {
-  font-family: $font-serif;
+  // font-family: $font-serif;
   display: inline-block;
   text-decoration: none;
   color: $link-color;
