--- a/assets/css/sass/_post.scss
+++ b/assets/css/sass/_post.scss
@@ -3,8 +3,8 @@
   @include flex-direction(column);
   width: 100%;
   max-width: $max-container-width;
-  background-color: $white;
-  @include border-radius(10px);
+  background-color: $article-bg-color;
+  // @include border-radius(10px);
   margin-top: 5px;
 
   // .wrap-content,
@@ -17,17 +17,17 @@
   @include flexbox;
   @include flex-direction(column);
   @include align-items(center);
-  @include border-radius(8px);
+  // @include border-radius(8px);
   padding: 20px;
 }
 
 .post-header {
   @include align-self(flex-start);
   width: 100%;
-  background-color: $white;
+  background-color: $article-bg-color;
   padding: 5px;
   border-bottom: 1px solid $dark-gray;
-  @include border-radius(8px 8px 0 0);
+  // @include border-radius(8px 8px 0 0);
 }
 
 
@@ -44,7 +44,7 @@
   .page-date {
     color: $dark-gray;
     font-weight: 300;
-    font-size: 0.75em;
+    font-size: 0.9em;
     text-transform: uppercase;
     padding-bottom: 30px;
   }
@@ -55,7 +55,7 @@
   @include flex-direction(column);
 
   width: 90%;
-  line-height: 1.5em;
+  // line-height: 1.5em;
 
   h1, h2, h3 {
     margin: 70px 0 15px 0;
@@ -71,6 +71,10 @@
     text-decoration: underline;
     // font-weight: 550;
     // font-style: oblique;
+  }
+
+  img:not(.page-image) {
+    border: 1px solid $img-border-color;
   }
 }
 
@@ -144,16 +148,16 @@
 }
 
 blockquote {
-  border-left: 5px solid $blockquote-border-color;
+  border-left: 3px solid $blockquote-border-color;
   background-color: $blockquote-bg-color;
-  padding: .3em 1em .3em 1em;
+  padding: .2em.81em .2em .8em;
   // padding-left: 1rem;
   // padding-right: 1rem;
   margin: 0 1rem 0 1rem;
   // font-style: italic;
-  font-weight: 700;
-  line-height: 1.1em;
-  font-size: 1.3em;
+  font-weight: 550;
+  line-height: 1.3em;
+  font-size: 1.2em;
   
   color: $blockquote-color;
 
