--- a/assets/css/sass/_post_list.scss
+++ b/assets/css/sass/_post_list.scss
@@ -12,26 +12,27 @@
   
   .post-item {
     // border: 1px solid forestgreen;
+    border-bottom: 1px solid $post-item-border-color;
     @include flexbox;
     @include flex-direction(column);
     width: 100%;
     padding: 1rem;
-    margin-bottom: 1.5rem;
+    // margin-bottom: 1.5rem;
     min-height: 4rem;
-    background-color: #fff;
+    background-color: $post-item-bg-color;
     overflow: hidden;
   
-    @include border-radius(10px);
-    @include transition(all .3s ease);
-    // @include box-shadow(0 1px 1px 0 rgba(31, 35, 46, .15));
-    // @include box-shadow(3px 7px 9px 0px rgba(0,0,0,0.51));
-    @include box-shadow(0px 1px 1px 0px rgba(0,0,0,0.51));
+    // @include border-radius(10px);
+    // @include transition(all .3s ease);
+    // // @include box-shadow(0 1px 1px 0 rgba(31, 35, 46, .15));
+    // // @include box-shadow(3px 7px 9px 0px rgba(0,0,0,0.51));
+    // @include box-shadow(0px 1px 1px 0px rgba(0,0,0,0.51));
 
-    &:hover {
-      @include transform(translate(0px, -2px));
-      // @include box-shadow(0 15px 45px -10px rgba(10, 16, 34, .2));
-      @include box-shadow(3px 20px 50px -15px rgba(0,0, 0, .9));
-    }
+    // &:hover {
+    //   @include transform(translate(0px, -2px));
+    //   // @include box-shadow(0 15px 45px -10px rgba(10, 16, 34, .2));
+    //   @include box-shadow(3px 20px 50px -15px rgba(0,0, 0, .9));
+    // }
 
     // & * {
     //   padding: 2px;
@@ -39,7 +40,7 @@
 
     .post-item-header {
       // border: 1px solid royalblue;
-      border-bottom: 1px solid $dark-gray;
+      // border-bottom: 1px solid $dark-gray;
       @include flexbox;
       @include flex-direction(row);
       @include flex-wrap(wrap);
@@ -55,8 +56,13 @@
         // text-overflow: ellipsis;
         line-height: 2em;
         a {
-          // color: $title_color;
-          font-family: $font-serif;
+          color: $link-post-title-color;
+          // font-family: $font-serif;
+
+          &:hover {
+            color: $hover-color;
+            @include transform(scale(1.3));
+        }
         }
       }
       .post-date {
@@ -89,17 +95,13 @@
     
     .post-text {
       // border: solid 1px purple;
-      color: $dark;
+      // color: $dark;
       margin-bottom: .3em;
       height: 100%;
       width: 100%;
       max-width: 100%;
       @include align-self(center);
       word-wrap: break-word;
-    }
-
-    .item-list-tag {
-      text-align: left;
     }
   }
 }
